test/fixtures/errors/error_exit.snapshot
Exiting with code=1
node:assert:*
    throw new AssertionError(obj);
    ^

AssertionError [ERR_ASSERTION]: Expected values to be strictly equal:

1 !== 2

    at new AssertionError (node:internal*assert*assertion_error:*:*) {
  generatedMessage: true,
  code: 'ERR_ASSERTION',
  actual: 1,
  expected: 2,
  operator: 'strictEqual'
}

Node.js *
